tests/files/flow_controller_tests/should_run/034.cmdr
x = parseFloat("16");
print x;