tests/files/flow_controller_tests/should_fail/029.cmdr
x = "cat";
print abs(x);